--- a/index.html
+++ b/index.html
@@ -2,15 +2,27 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <script src="index.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Doggo Pics</title>
+    <link rel="stylesheet" href="styles.css"></head>
+    
 </head>
 
 <body>
-    <Button id="btn">Click me</Button>
-    <div id="output"></div>
+    <header>
+        <h1>Doggos!</h1>
+    </header>
+    <main>
+        <section>
+            <button id="btn">Click me</button>
+        </section>
+        <section id="output">
+            <div id="output"></div>
+        </section>
+    </main>
     
+    <script src="index.js"></script>
 </body>
 
 </html>
