--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doggo Pics</title>
-    <link rel="stylesheet" href="styles.css"></head>
+    <link rel="stylesheet" href="/assets/css/style.css">
+</head>
     
 </head>
 
